RESOLVED FIXED266258
Invalidate process object before destruction
https://bugs.webkit.org/show_bug.cgi?id=266258
Summary Invalidate process object before destruction
Per Arne Vollan
Reported 2023-12-11 14:53:15 PST
Invalidate process object before destruction to avoid assert.
Attachments
Per Arne Vollan
Comment 1 2023-12-11 14:53:35 PST
Per Arne Vollan
Comment 2 2023-12-11 14:57:46 PST
EWS
Comment 3 2023-12-11 16:56:30 PST
Committed 271906@main (78c281f02249): <https://commits.webkit.org/271906@main> Reviewed commits have been landed. Closing PR #21656 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.