Invalidate process object before destruction https://bugs.webkit.org/show_bug.cgi?id=266258 rdar://119513188

Reviewed by Brent Fulgham.

Invalidate process object before destruction to avoid assert.

* Source/WebKit/UIProcess/Launcher/cocoa/ProcessLauncherCocoa.mm:
(WebKit::ProcessLauncher::launchProcess):

Canonical link: https://commits.webkit.org/271906@main